# reposcape

./: .gitignore  README.md  ROADMAP.md  RULES.md  SESSION_LOG.md  pyproject.toml  reposcape_cli.py
.github/workflows/: ci.yml  snapshots.yml
src/: __init__.py  analyze.py  clone.py  commit_quality.py  compare.py  complexity.py  contributors.py  dependencies.py  github_meta.py  heatmap.py  history.py  history_delta.py  languages.py  pr_velocity.py  techdebt.py  timeline.py  treemap.py
src/cli/: __init__.py  main.py
src/web/: __init__.py  __main__.py  app.py  export.py  og.py  pdf_helper.py  pro.py  stripe_client.py  stripe_env.py  stripe_webhook.py
src/web/auth/: github_oauth.py  session.py  token_store.py
src/web/demo/: __init__.py  nightshift.json
src/web/entitlements/: __init__.py  cookies.py  email.py  identity.py  store.py
src/web/routes/: __init__.py  api.py  auth.py  billing.py  billing_restore.py  pages.py  pdf.py  share.py  showcase.py  story.py
src/web/static/: export.js  styles.css
src/web/templates/: compare.html  dashboard.html  index.html  share_preview.html  story.html
tests/: __init__.py  conftest.py  test_cli.py  test_clone.py  test_commit_quality.py  test_complexity.py  test_contributors.py  test_dependencies.py  test_github_meta.py  test_heatmap.py  test_history.py  test_history_delta.py  test_languages.py  test_pr_velocity.py  test_techdebt.py  test_timeline.py  test_treemap.py
tests/web/: test_auth_cookie.py  test_entitlements_store.py  test_og.py  test_story_route.py  test_stripe_webhook.py
